deploy: f7fb795da945f1d026a9ce5ba6ef8191ef30daeb

--- a/nodesnim/core/anchor.html
+++ b/nodesnim/core/anchor.html
@@ -121,6 +121,8 @@ function main() {
     title="Anchor(x1, y1, x2, y2: float): AnchorRef"><wbr />Anchor<span class="attachedType">AnchorRef</span></a></li>
   <li><a class="reference" href="#Anchor%2CVector2Ref%2CVector2Ref"
     title="Anchor(vec1, vec2: Vector2Ref): AnchorRef"><wbr />Anchor<span class="attachedType">AnchorRef</span></a></li>
+  <li><a class="reference" href="#clear%2CAnchorRef"
+    title="clear(a: AnchorRef)"><wbr />clear<span class="attachedType">AnchorRef</span></a></li>
   <li><a class="reference" href="#isEmpty%2CAnchorRef"
     title="isEmpty(a: AnchorRef): bool"><wbr />is<wbr />Empty<span class="attachedType">AnchorRef</span></a></li>
   <li><a class="reference" href="#%24%2CAnchorRef"
@@ -179,6 +181,13 @@ function main() {
 
 
 </dd>
+<a id="clear,AnchorRef"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#clear%2CAnchorRef"><span class="Identifier">clear</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="isEmpty,AnchorRef"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#isEmpty%2CAnchorRef"><span class="Identifier">isEmpty</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -203,7 +212,7 @@ Returns true, if a is Anchor(0, 0, 0, 0)
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-05 11:40:08 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:26:57 UTC</small>
       </div>
     </div>
   </div>
