--- a/nodesnim/core/vector2.html
+++ b/nodesnim/core/vector2.html
@@ -123,6 +123,8 @@ function main() {
     title="abs(a: Vector2Ref): Vector2Ref"><wbr />abs<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#angle%2CVector2Ref"
     title="angle(a: Vector2Ref): float"><wbr />angle<span class="attachedType">Vector2Ref</span></a></li>
+  <li><a class="reference" href="#clear%2CVector2Ref"
+    title="clear(a: Vector2Ref)"><wbr />clear<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#cross%2CVector2Ref%2CVector2Ref"
     title="cross(a, b: Vector2Ref): float"><wbr />cross<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#cross%2CVector2Ref%2Cfloat%2Cfloat"
@@ -155,6 +157,8 @@ function main() {
     title="directionTo(a: Vector2Ref; x, y: float): Vector2Ref"><wbr />direction<wbr />To<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#intersects%2CVector2Ref%2CVector2Ref%2CVector2Ref%2CVector2Ref"
     title="intersects(a, b, c, d: Vector2Ref): bool"><wbr />intersects<span class="attachedType">Vector2Ref</span></a></li>
+  <li><a class="reference" href="#isEmpty%2CVector2Ref"
+    title="isEmpty(a: Vector2Ref): bool"><wbr />is<wbr />Empty<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#%2B%2CVector2Ref%2CVector2Ref"
     title="`+`(a, b: Vector2Ref): Vector2Ref"><wbr />`+`<span class="attachedType">Vector2Ref</span></a></li>
   <li><a class="reference" href="#-%2CVector2Ref%2CVector2Ref"
@@ -270,6 +274,13 @@ function main() {
 
 
 </dd>
+<a id="clear,Vector2Ref"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#clear%2CVector2Ref"><span class="Identifier">clear</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="cross,Vector2Ref,Vector2Ref"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#cross%2CVector2Ref%2CVector2Ref"><span class="Identifier">cross</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -377,6 +388,13 @@ function main() {
 </dd>
 <a id="intersects,Vector2Ref,Vector2Ref,Vector2Ref,Vector2Ref"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#intersects%2CVector2Ref%2CVector2Ref%2CVector2Ref%2CVector2Ref"><span class="Identifier">intersects</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">,</span> <span class="Identifier">c</span><span class="Other">,</span> <span class="Identifier">d</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="isEmpty,Vector2Ref"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#isEmpty%2CVector2Ref"><span class="Identifier">isEmpty</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -525,7 +543,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-05 11:40:08 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:26:57 UTC</small>
       </div>
     </div>
   </div>
