--- a/nodesnim/nodescontrol/box.html
+++ b/nodesnim/nodescontrol/box.html
@@ -133,8 +133,8 @@ function main() {
     title="draw(self: BoxRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#duplicate.e%2CBoxRef"
     title="duplicate(self: BoxRef): BoxRef"><wbr />duplicate<span class="attachedType">BoxRef</span></a></li>
-  <li><a class="reference" href="#resize.e%2CBoxRef%2CGLfloat%2CGLfloat"
-    title="resize(self: BoxRef; w, h: GLfloat)"><wbr />resize<span class="attachedType">BoxRef</span></a></li>
+  <li><a class="reference" href="#resize.e%2CBoxRef%2CGLfloat%2CGLfloat%2Cbool"
+    title="resize(self: BoxRef; w, h: GLfloat; save_anchor: bool = false)"><wbr />resize<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#setChildAnchor.e%2CBoxRef%2CAnchorRef"
     title="setChildAnchor(self: BoxRef; anchor: AnchorRef)"><wbr />set<wbr />Child<wbr />Anchor<span class="attachedType">BoxRef</span></a></li>
   <li><a class="reference" href="#setChildAnchor.e%2CBoxRef%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
@@ -230,8 +230,8 @@ this method uses in the <tt class="docutils literal"><span class="pre">window.ni
 Duplicates Box.
 
 </dd>
-<a id="resize.e,BoxRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#resize.e%2CBoxRef%2CGLfloat%2CGLfloat"><span class="Identifier">resize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxRef"><span class="Identifier">BoxRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="resize.e,BoxRef,GLfloat,GLfloat,bool"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#resize.e%2CBoxRef%2CGLfloat%2CGLfloat%2Cbool"><span class="Identifier">resize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxRef"><span class="Identifier">BoxRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">;</span> <span class="Identifier">save_anchor</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Resizes Box node.</p>
@@ -275,7 +275,7 @@ Duplicates Box.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-05 11:40:32 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:17 UTC</small>
       </div>
     </div>
   </div>
