--- a/nodesnim/nodescontrol/grid_box.html
+++ b/nodesnim/nodescontrol/grid_box.html
@@ -136,8 +136,8 @@ function main() {
     title="draw(self: GridBoxRef; w, h: GLfloat)"><wbr />draw<span class="attachedType">GridBoxRef</span></a></li>
   <li><a class="reference" href="#duplicate.e%2CGridBoxRef"
     title="duplicate(self: GridBoxRef): GridBoxRef"><wbr />duplicate<span class="attachedType">GridBoxRef</span></a></li>
-  <li><a class="reference" href="#resize.e%2CGridBoxRef%2CGLfloat%2CGLfloat"
-    title="resize(self: GridBoxRef; w, h: GLfloat)"><wbr />resize<span class="attachedType">GridBoxRef</span></a></li>
+  <li><a class="reference" href="#resize.e%2CGridBoxRef%2CGLfloat%2CGLfloat%2Cbool"
+    title="resize(self: GridBoxRef; w, h: GLfloat; save_anchor: bool = false)"><wbr />resize<span class="attachedType">GridBoxRef</span></a></li>
   <li><a class="reference" href="#setRow.e%2CGridBoxRef%2Cint"
     title="setRow(self: GridBoxRef; row: int)"><wbr />set<wbr />Row<span class="attachedType">GridBoxRef</span></a></li>
   <li><a class="reference" href="#setSeparator.e%2CGridBoxRef%2Cfloat"
@@ -241,8 +241,9 @@ This method uses in the <tt class="docutils literal"><span class="pre">window.ni
 Duplicates GridBox object and create a new GridBox.
 
 </dd>
-<a id="resize.e,GridBoxRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#resize.e%2CGridBoxRef%2CGLfloat%2CGLfloat"><span class="Identifier">resize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxRef"><span class="Identifier">GridBoxRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="resize.e,GridBoxRef,GLfloat,GLfloat,bool"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#resize.e%2CGridBoxRef%2CGLfloat%2CGLfloat%2Cbool"><span class="Identifier">resize</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="grid_box.html#GridBoxRef"><span class="Identifier">GridBoxRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">;</span> <span class="Identifier">save_anchor</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Resizes GridBox.</p>
@@ -277,7 +278,7 @@ Changes separator between child nodes.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-05 11:40:39 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-08 18:27:22 UTC</small>
       </div>
     </div>
   </div>
